--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body>
 <!-- Navbar -->
     <nav>
-        <h1>Мария Петрова</h1>
+        <h1>Татьяна Туркина</h1>
         <ul class="navigation">
             <li><a href="#about" class="nav-link">Обо мне</a></li>
             <li><a href="#skills" class="nav-link">Навыки</a></li>
