--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 <footer>
     <p class="copy">&copy; Copyright 2022</p>
     <p class="copy">Создано
-        <a href="" target="_blank">Марией Петровой</a>
+        <a href="" target="_blank">Татьяной Туркиной</a>
     </p>
 </footer>
 
